# Rover-Project

./: .gitignore  README.md
DEV_WS/Container_build/OpenCV/: Makefile
DEV_WS/Container_build/OpenCV/include/: main.hpp  scan.hpp  video_io.hpp
DEV_WS/Container_build/OpenCV/src/: main.cpp  scan.cpp  video_io.cpp
DEV_WS/Container_build/RL/: Racing-Robot-Pre-Trained.py  Racing-Robot-test1.py  Racing-Robot-test1.txt
DEV_WS/Container_build/ros2_ws/src/ pi_nodes/: CMakeLists.txt
DEV_WS/Container_build/ros2_ws/src/pi_node/: package.xml
DEV_WS/Container_build/ros2_ws/src/pi_node/include/: uart.hpp
DEV_WS/Container_build/ros2_ws/src/pi_node/src/: data_transfer_node.cpp  main.c  uart.cpp
DEV_WS/Container_build/ros2_ws/src/robot_metapackage/: package.xml
DEV_WS/Container_build/ros2_ws/src/vm_node/: CMakeLists.txt  package.xml
DEV_WS/install/: local_setup.sh  setup.sh
DEV_WS/log/: latest_build
DEV_WS/src/my_bot/config/: twist_mux.yaml
DEV_WS/src/my_bot/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
DEV_WS/src/my_bot/install/: local_setup.sh  setup.sh
DEV_WS/src/my_bot/install/my_bot/share/ament_index/resource_index/package_run_dependencies/: my_bot
DEV_WS/src/my_bot/install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
DEV_WS/src/my_bot/install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
DEV_WS/src/my_bot/install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
DEV_WS/src/my_bot/install/my_bot/share/my_bot/config/: empty.yaml
DEV_WS/src/my_bot/install/my_bot/share/my_bot/description/: robot.urdf.xacro
DEV_WS/src/my_bot/install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
DEV_WS/src/my_bot/install/my_bot/share/my_bot/launch/: rsp.launch.py
DEV_WS/src/my_bot/install/my_bot/share/my_bot/worlds/: empty.world
DEV_WS/src/my_bot/launch/: launch_sim.launch.py
DEV_WS/src/my_bot/log/: latest_build
