<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3"?>
<package format="3">
  <name>pi_nodes</name>
  <version>0.0.0</version>
  <description>Nodes that run on Raspberry Pi</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <!-- Add other specific dependencies your nodes need -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->

  <!-- Export includes for C++ -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
