<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3"?>
<package format="3">
  <name>robot_metapackage</name>
  <version>0.0.0</version>
  <description>A metapackage to group all robot packages</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- This tag makes it a metapackage -->
  <export>
    <metapackage/>
  </export>

  <!-- List all packages that this metapackage depends on -->
  <exec_depend>pi_nodes</exec_depend>
  <exec_depend>vm_nodes</exec_depend>
</package>
