<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3"?>
<package format="3">
  <name>vm_nodes</name>
  <version>0.0.0</version>
  <description>Nodes that run on Virtual Machine</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <!-- GUI tools for VM -->
  <depend>rclpy</depend>
  <depend>rqt_gui</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
